# django_auth_mafiasi

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
django_auth_mafiasi/: models.py  urls.py
django_auth_mafiasi/django_rest_framework/: permissions.py
django_auth_mafiasi/migrations/: 0001_initial.py
scripts/: get_tokens.py
src/: manage.py
src/django_auth_mafiasi/: __init__.py  apps.py  auth.py  auth_utils.py  configuration.py  models.py  settings.py  urls.py  views.py
src/django_auth_mafiasi/app_server/: urls.py  views.py
src/django_auth_mafiasi/django_rest_framework/: authentication.py  openapi.py
src/django_auth_mafiasi/migrations/: 0001_initial.py  0002_auto_20210204_1434.py  0003_auto_20210204_1525.py  0004_add_profile_fields.py  0005_add_user_token_storage.py
src/django_auth_mafiasi/resource_server/django_rest_framework/: __init__.py  authentication.py  openapi.py  permissions.py
test_projects/app_server/: manage.py
test_projects/app_server/app_server/: asgi.py  settings.py  urls.py  views.py  wsgi.py
